Change site tittle

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -31,7 +31,7 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/plugins/daterangepicker/daterangepicker.css">
     <!-- summernote -->
     <link rel="stylesheet" href="%PUBLIC_URL%/plugins/summernote/summernote-bs4.min.css">
-    <title>React App</title>
+    <title>Employee Management System</title>
   </head>
   <body class="hold-transition sidebar-mini layout-fixed">
     <div class="wrapper">
